exports[`valid-test-tags > invalid(1): import {test, it, describe, suite, before} from 'node:test';\ntest(\"title\", {tags: \"unit\"}, () => {}); 1`] = `

  1 | import {test, it, describe, suite, before} from 'node:test';
  2 | test("title", {tags: "unit"}, () => {});

`;

exports[`valid-test-tags > invalid(1): import {test, it, describe, suite, before} from 'node:test';\ntest(\"title\", {tags: \"unit\"}, () => {}); 2`] = `

Message:
  1 | import {test, it, describe, suite, before} from 'node:test';
> 2 | test("title", {tags: "unit"}, () => {});
    |                      ^^^^^^ \`tags\` must be an array.

`;

exports[`valid-test-tags > invalid(10): import {test, it, describe, suite, before} from 'node:test';\ntest(\"title\", {...options, tags: [\"UPPER\"]}, () => {}); 1`] = `

  1 | import {test, it, describe, suite, before} from 'node:test';
  2 | test("title", {...options, tags: ["UPPER"]}, () => {});

`;

exports[`valid-test-tags > invalid(10): import {test, it, describe, suite, before} from 'node:test';\ntest(\"title\", {...options, tags: [\"UPPER\"]}, () => {}); 2`] = `

Message:
  1 | import {test, it, describe, suite, before} from 'node:test';
> 2 | test("title", {...options, tags: ["UPPER"]}, () => {});
    |                                   ^^^^^^^ Tag \`UPPER\` must use its lowercase canonical form.

Output:
  1 | import {test, it, describe, suite, before} from 'node:test';
  2 | test("title", {...options, tags: ["upper"]}, () => {});

`;

exports[`valid-test-tags > invalid(11): import {test, it, describe, suite, before} from 'node:test';\ntest(\"title\", {[\"tags\"]: [\"unit\"], tags: [\"UPPER\"]}, () => {}); 1`] = `

  1 | import {test, it, describe, suite, before} from 'node:test';
  2 | test("title", {["tags"]: ["unit"], tags: ["UPPER"]}, () => {});

`;

exports[`valid-test-tags > invalid(11): import {test, it, describe, suite, before} from 'node:test';\ntest(\"title\", {[\"tags\"]: [\"unit\"], tags: [\"UPPER\"]}, () => {}); 2`] = `

Message:
  1 | import {test, it, describe, suite, before} from 'node:test';
> 2 | test("title", {["tags"]: ["unit"], tags: ["UPPER"]}, () => {});
    |                                           ^^^^^^^ Tag \`UPPER\` must use its lowercase canonical form.

Output:
  1 | import {test, it, describe, suite, before} from 'node:test';
  2 | test("title", {["tags"]: ["unit"], tags: ["upper"]}, () => {});

`;

exports[`valid-test-tags > invalid(12): import {test, it, describe, suite, before} from 'node:test';\ntest(\"title\", {\"tags\": [\"UPPER\"]}, () => {}); 1`] = `

  1 | import {test, it, describe, suite, before} from 'node:test';
  2 | test("title", {"tags": ["UPPER"]}, () => {});

`;

exports[`valid-test-tags > invalid(12): import {test, it, describe, suite, before} from 'node:test';\ntest(\"title\", {\"tags\": [\"UPPER\"]}, () => {}); 2`] = `

Message:
  1 | import {test, it, describe, suite, before} from 'node:test';
> 2 | test("title", {"tags": ["UPPER"]}, () => {});
    |                         ^^^^^^^ Tag \`UPPER\` must use its lowercase canonical form.

Output:
  1 | import {test, it, describe, suite, before} from 'node:test';
  2 | test("title", {"tags": ["upper"]}, () => {});

`;

exports[`valid-test-tags > invalid(13): import {test, it, describe, suite, before} from 'node:test';\ntest(\"title\", {tags: [\`SLOW\`]}, () => {}); 1`] = `

  1 | import {test, it, describe, suite, before} from 'node:test';
  2 | test("title", {tags: [\`SLOW\`]}, () => {});

`;

exports[`valid-test-tags > invalid(13): import {test, it, describe, suite, before} from 'node:test';\ntest(\"title\", {tags: [\`SLOW\`]}, () => {}); 2`] = `

Message:
  1 | import {test, it, describe, suite, before} from 'node:test';
> 2 | test("title", {tags: [\`SLOW\`]}, () => {});
    |                       ^^^^^^ Tag \`SLOW\` must use its lowercase canonical form.

Output:
  1 | import {test, it, describe, suite, before} from 'node:test';
  2 | test("title", {tags: ['slow']}, () => {});

`;

exports[`valid-test-tags > invalid(14): import {test, it, describe, suite, before} from 'node:test';\ntest(\"title\", {tags: [\"ÜNICODE\"]}, () => {}); 1`] = `

  1 | import {test, it, describe, suite, before} from 'node:test';
  2 | test("title", {tags: ["ÜNICODE"]}, () => {});

`;

exports[`valid-test-tags > invalid(14): import {test, it, describe, suite, before} from 'node:test';\ntest(\"title\", {tags: [\"ÜNICODE\"]}, () => {}); 2`] = `

Message:
  1 | import {test, it, describe, suite, before} from 'node:test';
> 2 | test("title", {tags: ["ÜNICODE"]}, () => {});
    |                       ^^^^^^^^^ Tag \`ÜNICODE\` must use its lowercase canonical form.

Output:
  1 | import {test, it, describe, suite, before} from 'node:test';
  2 | test("title", {tags: ["ünicode"]}, () => {});

`;

exports[`valid-test-tags > invalid(15): import {test, it, describe, suite, before} from 'node:test';\ntest(\"title\", {tags: [/* tag */ \"UPPER\"]}, () => {}); 1`] = `

  1 | import {test, it, describe, suite, before} from 'node:test';
  2 | test("title", {tags: [/* tag */ "UPPER"]}, () => {});

`;

exports[`valid-test-tags > invalid(15): import {test, it, describe, suite, before} from 'node:test';\ntest(\"title\", {tags: [/* tag */ \"UPPER\"]}, () => {}); 2`] = `

Message:
  1 | import {test, it, describe, suite, before} from 'node:test';
> 2 | test("title", {tags: [/* tag */ "UPPER"]}, () => {});
    |                                 ^^^^^^^ Tag \`UPPER\` must use its lowercase canonical form.

Output:
  1 | import {test, it, describe, suite, before} from 'node:test';
  2 | test("title", {tags: [/* tag */ "upper"]}, () => {});

`;

exports[`valid-test-tags > invalid(16): import {test, it, describe, suite, before} from 'node:test';\ntest(\"title\", {tags: [\"unit\", \"unit\"]}, () => {}); 1`] = `

  1 | import {test, it, describe, suite, before} from 'node:test';
  2 | test("title", {tags: ["unit", "unit"]}, () => {});

`;

exports[`valid-test-tags > invalid(16): import {test, it, describe, suite, before} from 'node:test';\ntest(\"title\", {tags: [\"unit\", \"unit\"]}, () => {}); 2`] = `

Message:
  1 | import {test, it, describe, suite, before} from 'node:test';
> 2 | test("title", {tags: ["unit", "unit"]}, () => {});
    |                               ^^^^^^ Duplicate tag \`unit\`.

`;

exports[`valid-test-tags > invalid(17): import {test, it, describe, suite, before} from 'node:test';\ntest(\"title\", {tags: [\"UNIT\", \"unit\"]}, () => {}); 1`] = `

  1 | import {test, it, describe, suite, before} from 'node:test';
  2 | test("title", {tags: ["UNIT", "unit"]}, () => {});

`;

exports[`valid-test-tags > invalid(17): import {test, it, describe, suite, before} from 'node:test';\ntest(\"title\", {tags: [\"UNIT\", \"unit\"]}, () => {}); 2`] = `

Message:
  1 | import {test, it, describe, suite, before} from 'node:test';
> 2 | test("title", {tags: ["UNIT", "unit"]}, () => {});
    |                       ^^^^^^ Tag \`UNIT\` must use its lowercase canonical form.

Output:
  1 | import {test, it, describe, suite, before} from 'node:test';
  2 | test("title", {tags: ["unit", "unit"]}, () => {});

`;

exports[`valid-test-tags > invalid(17): import {test, it, describe, suite, before} from 'node:test';\ntest(\"title\", {tags: [\"UNIT\", \"unit\"]}, () => {}); 3`] = `

Message:
  1 | import {test, it, describe, suite, before} from 'node:test';
> 2 | test("title", {tags: ["UNIT", "unit"]}, () => {});
    |                               ^^^^^^ Duplicate tag \`unit\`.

`;

exports[`valid-test-tags > invalid(18): import {test, it, describe, suite, before} from 'node:test';\ntest(\"title\", {tags: [\"UNIT\" as string] as string[]}, () => {}); 1`] = `

  1 | import {test, it, describe, suite, before} from 'node:test';
  2 | test("title", {tags: ["UNIT" as string] as string[]}, () => {});

`;

exports[`valid-test-tags > invalid(18): import {test, it, describe, suite, before} from 'node:test';\ntest(\"title\", {tags: [\"UNIT\" as string] as string[]}, () => {}); 2`] = `

Message:
  1 | import {test, it, describe, suite, before} from 'node:test';
> 2 | test("title", {tags: ["UNIT" as string] as string[]}, () => {});
    |                       ^^^^^^ Tag \`UNIT\` must use its lowercase canonical form.

Output:
  1 | import {test, it, describe, suite, before} from 'node:test';
  2 | test("title", {tags: ["unit" as string] as string[]}, () => {});

`;

exports[`valid-test-tags > invalid(19): import {test, it, describe, suite, before} from 'node:test';\ntest(\"title\", {tags: [\"UPPER\" satisfies string]!}, () => {}); 1`] = `

  1 | import {test, it, describe, suite, before} from 'node:test';
  2 | test("title", {tags: ["UPPER" satisfies string]!}, () => {});

`;

exports[`valid-test-tags > invalid(19): import {test, it, describe, suite, before} from 'node:test';\ntest(\"title\", {tags: [\"UPPER\" satisfies string]!}, () => {}); 2`] = `

Message:
  1 | import {test, it, describe, suite, before} from 'node:test';
> 2 | test("title", {tags: ["UPPER" satisfies string]!}, () => {});
    |                       ^^^^^^^ Tag \`UPPER\` must use its lowercase canonical form.

Output:
  1 | import {test, it, describe, suite, before} from 'node:test';
  2 | test("title", {tags: ["upper" satisfies string]!}, () => {});

`;

exports[`valid-test-tags > invalid(2): import {test, it, describe, suite, before} from 'node:test';\ntest(\"title\", {tags: null}, () => {}); 1`] = `

  1 | import {test, it, describe, suite, before} from 'node:test';
  2 | test("title", {tags: null}, () => {});

`;

exports[`valid-test-tags > invalid(2): import {test, it, describe, suite, before} from 'node:test';\ntest(\"title\", {tags: null}, () => {}); 2`] = `

Message:
  1 | import {test, it, describe, suite, before} from 'node:test';
> 2 | test("title", {tags: null}, () => {});
    |                      ^^^^ \`tags\` must be an array.

`;

exports[`valid-test-tags > invalid(3): import {test, it, describe, suite, before} from 'node:test';\ntest(\"title\", {tags: {}}, () => {}); 1`] = `

  1 | import {test, it, describe, suite, before} from 'node:test';
  2 | test("title", {tags: {}}, () => {});

`;

exports[`valid-test-tags > invalid(3): import {test, it, describe, suite, before} from 'node:test';\ntest(\"title\", {tags: {}}, () => {}); 2`] = `

Message:
  1 | import {test, it, describe, suite, before} from 'node:test';
> 2 | test("title", {tags: {}}, () => {});
    |                      ^^ \`tags\` must be an array.

`;

exports[`valid-test-tags > invalid(4): import {test, it, describe, suite, before} from 'node:test';\ntest(\"title\", {tags: [\"unit\", 1, true, {}, null]}, () => {}); 1`] = `

  1 | import {test, it, describe, suite, before} from 'node:test';
  2 | test("title", {tags: ["unit", 1, true, {}, null]}, () => {});

`;

exports[`valid-test-tags > invalid(4): import {test, it, describe, suite, before} from 'node:test';\ntest(\"title\", {tags: [\"unit\", 1, true, {}, null]}, () => {}); 2`] = `

Message:
  1 | import {test, it, describe, suite, before} from 'node:test';
> 2 | test("title", {tags: ["unit", 1, true, {}, null]}, () => {});
    |                               ^ Tag values must be strings.

`;

exports[`valid-test-tags > invalid(4): import {test, it, describe, suite, before} from 'node:test';\ntest(\"title\", {tags: [\"unit\", 1, true, {}, null]}, () => {}); 3`] = `

Message:
  1 | import {test, it, describe, suite, before} from 'node:test';
> 2 | test("title", {tags: ["unit", 1, true, {}, null]}, () => {});
    |                                  ^^^^ Tag values must be strings.

`;

exports[`valid-test-tags > invalid(4): import {test, it, describe, suite, before} from 'node:test';\ntest(\"title\", {tags: [\"unit\", 1, true, {}, null]}, () => {}); 4`] = `

Message:
  1 | import {test, it, describe, suite, before} from 'node:test';
> 2 | test("title", {tags: ["unit", 1, true, {}, null]}, () => {});
    |                                        ^^ Tag values must be strings.

`;

exports[`valid-test-tags > invalid(4): import {test, it, describe, suite, before} from 'node:test';\ntest(\"title\", {tags: [\"unit\", 1, true, {}, null]}, () => {}); 5`] = `

Message:
  1 | import {test, it, describe, suite, before} from 'node:test';
> 2 | test("title", {tags: ["unit", 1, true, {}, null]}, () => {});
    |                                            ^^^^ Tag values must be strings.

`;

exports[`valid-test-tags > invalid(5): import {test, it, describe, suite, before} from 'node:test';\ntest(\"title\", {tags: [\"unit\", , \"slow\"]}, () => {}); 1`] = `

  1 | import {test, it, describe, suite, before} from 'node:test';
  2 | test("title", {tags: ["unit", , "slow"]}, () => {});

`;

exports[`valid-test-tags > invalid(5): import {test, it, describe, suite, before} from 'node:test';\ntest(\"title\", {tags: [\"unit\", , \"slow\"]}, () => {}); 2`] = `

Message:
  1 | import {test, it, describe, suite, before} from 'node:test';
> 2 | test("title", {tags: ["unit", , "slow"]}, () => {});
    |                      ^^^^^^^^^^^^^^^^^^ \`tags\` must not contain empty slots.

`;

exports[`valid-test-tags > invalid(6): import {test, it, describe, suite, before} from 'node:test';\ntest(\"title\", {tags: [\"\"]}, () => {}); 1`] = `

  1 | import {test, it, describe, suite, before} from 'node:test';
  2 | test("title", {tags: [""]}, () => {});

`;

exports[`valid-test-tags > invalid(6): import {test, it, describe, suite, before} from 'node:test';\ntest(\"title\", {tags: [\"\"]}, () => {}); 2`] = `

Message:
  1 | import {test, it, describe, suite, before} from 'node:test';
> 2 | test("title", {tags: [""]}, () => {});
    |                       ^^ Tag values must not be empty.

`;

exports[`valid-test-tags > invalid(7): import {test, it, describe, suite, before} from 'node:test';\ntest(\"title\", {tags: [\`\`]}, () => {}); 1`] = `

  1 | import {test, it, describe, suite, before} from 'node:test';
  2 | test("title", {tags: [\`\`]}, () => {});

`;

exports[`valid-test-tags > invalid(7): import {test, it, describe, suite, before} from 'node:test';\ntest(\"title\", {tags: [\`\`]}, () => {}); 2`] = `

Message:
  1 | import {test, it, describe, suite, before} from 'node:test';
> 2 | test("title", {tags: [\`\`]}, () => {});
    |                       ^^ Tag values must not be empty.

`;

exports[`valid-test-tags > invalid(8): import {test, it, describe, suite, before} from 'node:test';\ntest(\"title\", {tags: [\"UNIT\"]}, () => {}); 1`] = `

  1 | import {test, it, describe, suite, before} from 'node:test';
  2 | test("title", {tags: ["UNIT"]}, () => {});

`;

exports[`valid-test-tags > invalid(8): import {test, it, describe, suite, before} from 'node:test';\ntest(\"title\", {tags: [\"UNIT\"]}, () => {}); 2`] = `

Message:
  1 | import {test, it, describe, suite, before} from 'node:test';
> 2 | test("title", {tags: ["UNIT"]}, () => {});
    |                       ^^^^^^ Tag \`UNIT\` must use its lowercase canonical form.

Output:
  1 | import {test, it, describe, suite, before} from 'node:test';
  2 | test("title", {tags: ["unit"]}, () => {});

`;

exports[`valid-test-tags > invalid(9): import {test, it, describe, suite, before} from 'node:test';\ntest(\"title\", {tags: [\"unit\"], tags: [\"UPPER\"]}, () => {}); 1`] = `

  1 | import {test, it, describe, suite, before} from 'node:test';
  2 | test("title", {tags: ["unit"], tags: ["UPPER"]}, () => {});

`;

exports[`valid-test-tags > invalid(9): import {test, it, describe, suite, before} from 'node:test';\ntest(\"title\", {tags: [\"unit\"], tags: [\"UPPER\"]}, () => {}); 2`] = `

Message:
  1 | import {test, it, describe, suite, before} from 'node:test';
> 2 | test("title", {tags: ["unit"], tags: ["UPPER"]}, () => {});
    |                                       ^^^^^^^ Tag \`UPPER\` must use its lowercase canonical form.

Output:
  1 | import {test, it, describe, suite, before} from 'node:test';
  2 | test("title", {tags: ["unit"], tags: ["upper"]}, () => {});

`;
